# Actix-web

actix-wev/project-toot/client/: Cargo.toml
actix-wev/project-toot/client/src/: client.rs  errors.rs  types.rs
actix-wev/project-toot/server/: .rustfmt.toml  Cargo.toml  tables.sql
actix-wev/project-toot/server/src/: constants.rs  main.rs  session.rs  types.rs
jsproject/chat/: main.css  main.html  script.js
