[package]
name = "project-toot-client"
version = "0.0.1"
edition = "2021"

[dependencies]
borsh = "~0.9"
chrono = "~0.4"
rand = "~0.8"
secp256k1 = { version = "~0.27", features = ["bitcoin-hashes", "rand"] }
uuid = { version = "~1.5", features = ["v4"] }
deadpool-postgres = "~0.11"
aes = "~0.8"
tungstenite = "~0.20"
